micro-services-project/SRC/deployments-k8s/deploy-db-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: khalilelk/khalil_images:db-service
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql  # Sélecteur pour cibler le pod mysql
  type: ClusterIP  # Type de service ClusterIP (par défaut)
  ports:
  - port: 3306  # Port externe exposé
    protocol: TCP
    targetPort: 3306  # Port interne du pod
