micro-services-project/SRC/deployments-k8s/deploy-espace-perso-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espace-perso-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: espace-perso-service
  template:
    metadata:
      labels:
        app: espace-perso-service
    spec:
      containers:
      - name: espace-perso-service
        image: khalilelk/khalil_images:espace-perso-servicevf
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: espace-perso-service
spec:
  selector:
    app: espace-perso-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  type: NodePort
