micro-services-project/SRC/deployments-k8s/deploy-logout-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logout-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logout-service
  template:
    metadata:
      labels:
        app: logout-service
    spec:
      containers:
      - name: logout-service
        image: khalilelk/khalil_images:logout-servicevf
        ports:
        - containerPort: 80
        

---
apiVersion: v1
kind: Service
metadata:
  name: logout-service
spec:
  selector:
    app: logout-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 80
  type: NodePort
