micro-services-project/SRC/deployments-k8s/deploy-redis-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1  # Nombre de réplicas du pod Redis
  selector:
    matchLabels:
      app: redis  # Sélecteur pour cibler le pod Redis
  template:
    metadata:
      labels:
        app: redis  # Label pour identifier les pods Redis
    spec:
      containers:
      - name: redis
        image: redis:latest  # Utilisation de l'image officielle Redis
        ports:
        - containerPort: 6379  # Port sur lequel Redis écoute dans le pod

---

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis  # Sélecteur pour cibler le pod Redis
  type: ClusterIP  # Type de service ClusterIP (par défaut)
  ports:
  - port: 6379  # Port externe exposé pour Redis
    protocol: TCP
    targetPort: 6379  # Port interne du pod Redis
